# pyarud

./: mkdocs.yml  pyproject.toml
pyarud/: arudi.py  bahr.py  processor.py  tafeela.py  zihaf.py
tests/: test_meters.py
